adição do campo observação (fba fbm) e apresentação de informações do usuário no detalhe do envio.

--- a/html/templates/base_shipment_details.html
+++ b/html/templates/base_shipment_details.html
@@ -160,14 +160,15 @@
             </div>
             <div class="col-md-6">
                  <label>{% trans "ID" %}: </label> {{ shipment.user.id }} <br>
-                 <label>{% trans "Nome" %}: </label> {{ shipment.user.first_name }} {{ shipment.user.last_name }}<br>
+                 <label>{% trans "Nome" %}: </label> {{ shipment.user.first_name }} {{ shipment.user.last_name }} {% if shipment.user|has_shipment_perm:'voi_prime' %}(VOI Prime){% elif shipment.user|has_shipment_perm:'create_fba_shipment' %}(We Create Your Amazon Shipment){% endif %}<br>
+                 <label>{% trans "Código" %}: </label> {{ shipment.user.from_key }} <br>
                  <label>{% trans "Email" %}: </label> {{ shipment.user.email }}<br>
-                 <label>{% trans "Nome loja Amazon"%}: </label> Nome da loja<br>
+                 <label>{% trans "Nome loja Amazon"%}: </label> {% if shipment.user.amz_store_name %}{{ shipment.user.amz_store_name }}{% endif %}<br>
                 <br> <p><a href="{%url 'admin:myauth_myuser_change' shipment.user.id %}" class="btn btn-default"><i class="fas fa-external-link-square-alt"></i> {% trans "Acessar cadastro do usuário" %}</a></p>
             </div>
               <div class="col-md-6">
-                  <h4><i class="fa fa-fw fa-info-circle"></i>Observação:</h4>
-                  <p>texto da observação</p><br><br>
+                  <h4><i class="fa fa-fw fa-info-circle"></i>{% trans "Observação" %}:</h4>
+                  <p>{% if shipment.observations %}{{ shipment.observations }}{% endif %}</p><br><br>
               </div>
           </div>
 
