--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -550,7 +550,7 @@
                 <div class="modal-body">
                     <p>{% trans "Olá" %}, {{ user.first_name }}</p>
                     <p>{% trans "Para que possamos realizar o seu envio, através do serviço 'We create your Amazon Shipment', precisamos que ANTES, realize a configuração em sua conta." %}</p>
-                    <p>{% blocktrans %}Veja como: <a class='download' href='https://fbaprepmaster.com/pt/create-az-shipment'>https://fbaprepmaster.com/pt/create-az-shipment</a>{% endblocktrans %}</p>
+                    <p>{% blocktrans %}Veja como: <a class='download' href='https://fbaprepmaster.com/pt/create-az-shipment' target="_blank">https://fbaprepmaster.com/pt/create-az-shipment</a>{% endblocktrans %}</p>
                     <p><strong>{% blocktrans %}Não se esqueça que você precisa também já ter cadastrado os produtos do seu envio em seu estoque na Amazon.{% endblocktrans %}</strong></p>
                     <p><strong>{% trans "Assinantes VOI Prime podem utilizar este serviço sem nenhum custo adicional." %}</strong></p>
                     <div class="panel-group" id="accordion">
