--- a/html/templates/shipment_add.html
+++ b/html/templates/shipment_add.html
@@ -115,7 +115,6 @@
                 </div>
             </div>
           </div>
-          {% endfor %}
           <hr />
           <div class="row">
             <div class="col-md-12">
@@ -153,14 +152,15 @@
             </div>
             <br>
           </div>
-            <div class="row">
+          <div class="row">
             <div class="form-group">
                 <div class="col-md-5"><br>
                     <label>{% trans "Observação" %}:</label>
-                    <textarea name="obs" placeholder="Observações sobre seu envio..." class="form-control ui-autocomplete-input" id="obs" autocomplete="off"></textarea>
+                    <textarea name="{{ shipment_form.observations.html_name }}" placeholder="Observações sobre seu envio..." class="form-control ui-autocomplete-input" id="{{ shipment_form.observations.id_for_label }}" autocomplete="off"></textarea>
                 </div>
             </div>
           </div>
+          {% endfor %}
           <div class="row">
             <button class="btn btn-primary filtar-btn alterar-status" id="send-btn" type="submit"><i class="fa fa-fw fa-paper-plane"></i> {% trans "Salvar" %}</button><br><br>
             <a href="javascript:history.back()"><i class="fa fa-fw fa-long-arrow-left"></i> {% trans "Voltar" %}</a><br><br><br><br>
