--- a/html/templates/merchant_shipment_add.html
+++ b/html/templates/merchant_shipment_add.html
@@ -108,12 +108,12 @@
                 <p><strong><i class="fa fa-fw fa-list-ol"></i> {% trans "Total de Produtos" %}: </strong><span id="totalProducts">-</span> </p>
             </div>
           </div>
-            <div class="row">
+          <div class="row">
             <div class="form-group">
                 <div class="col-md-5"><br>
                     <label>{% trans "Observação" %}:</label>
 
-                    <textarea name="obs" placeholder="Observações sobre seu envio..." class="form-control ui-autocomplete-input" id="obs" autocomplete="off"></textarea>
+                    <textarea name="{{ shipment_form.observations.html_name }}" placeholder="Observações sobre seu envio..." class="form-control ui-autocomplete-input" id="{{ shipment_form.observations.id_for_label }}" autocomplete="off"></textarea>
 
                 </div>
 
