--- a/html/templates/store_list.html
+++ b/html/templates/store_list.html
@@ -167,8 +167,8 @@ Quinta: 20:30 horário de Brasília
                          <!-- Fim conteúdo novo -->
                         {% endif %}
                         {% if is_lot_vip %}
-                          <!-- selo vip. Só vai aparecer quando o lote estiver nas primeiras 24 horas-->
-                            <img class="img-vip" src="/static/img/vip.png" width="" />
+                          <!-- O vip não aparecerá mais. Agora se for lote amazon, a imgem será /vip-amz.png e se for ebay, /vip-ebay.png-->
+                            <img class="img-vip" src="/static/img/vip-amz.png" width="" />
                          <!-- Fim selo -->
                         {% endif %}
 
