--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -590,7 +590,54 @@
         </div>
     </div>
 
-    <!-- Loading basta dar display block-->
+    <!-- Modal nome warehouse -->
+    <div id="modal-standby" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title"><i class="fas fa-hand-paper" style="font-size: 30px;"></i> {% trans "Standby" %}</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="panel-body">
+                        <form action="" method="post" class="form-edit-user" id="standby">
+                            <div class="form-group">
+                                <label for="motivo">{% trans "Motivo:" %}</label>
+                                <input type="text" name="motivo" class="form-control" id="motivo" placeholder="Motivo" required value="">
+                            </div>
+                            <button id="" type="button" class="btn btn-primary"><i class="fas fa-check"></i> {% trans "Salvar" %}</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fas fa-times"></i> {% trans "Fechar" %}</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+   <!-- Modal nome warehouse -->
+    <div id="modal-compra" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title"><i class="fas fa-hand-paper" style="font-size: 30px;"></i> {% trans "Confirmação" %}</h4>
+                </div>
+                <div class="modal-body">
+                    <p>{% trans "Olá" %}, {{ user.first_name }}</p>
+                    <p>{% trans "Afirmo ter analisado atentamente todas as informações deste lote, estando ciente que o prosseguimento desta compra me torna proprietário dos produtos contidos no mesmo, e de toda a responsabilidade acerca do destino que será dado aos mesmos. E isso inclui a Voi Services não realizar reembolso do valor pago em caso de desistência por qualquer motivo." %}</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="btn-confirmar" data-action-url="" class="btn btn-primary" data-dismiss="modal"><i class="fas fa-check"></i> {% trans "Confirmar Compra" %}</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fas fa-times"></i> {% trans "Fechar" %}</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Loading basta dar display block -->
     <div class="loading" style="display: none;">{% trans "Carregando" %}...</div>
 
     <!-- jQuery validate -->
