--- a/html/templates/includes/layout.html
+++ b/html/templates/includes/layout.html
@@ -592,7 +592,7 @@
         </div>
     </div>
 
-    <!-- Modal nome warehouse -->
+    <!-- Modal motivo standby -->
     <div id="modal-standby" class="modal fade">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -604,10 +604,10 @@
                     <div class="panel-body">
                         <form action="" method="post" class="form-edit-user" id="standby">
                             <div class="form-group">
-                                <label for="motivo">{% trans "Motivo:" %}</label>
-                                <input type="text" name="motivo" class="form-control" id="motivo" placeholder="Motivo" required value="">
+                                <label for="modal_standby_shipment_reason">{% trans "Motivo:" %}</label>
+                                <input type="text" name="motivo" class="form-control" id="modal_standby_shipment_reason" placeholder="Motivo" required value="">
                             </div>
-                            <button id="" type="button" class="btn btn-primary"><i class="fas fa-check"></i> {% trans "Salvar" %}</button>
+                            <button id="standby-btn-save" type="button" class="btn btn-primary"><i class="fas fa-check"></i> {% trans "Salvar" %}</button>
                         </form>
                     </div>
                 </div>
@@ -631,7 +631,7 @@
                     <p>{% trans "Afirmo ter analisado atentamente todas as informações deste lote, estando ciente que o prosseguimento desta compra me torna proprietário dos produtos contidos no mesmo, e de toda a responsabilidade acerca do destino que será dado aos mesmos. E isso inclui a Voi Services não realizar reembolso do valor pago em caso de desistência por qualquer motivo." %}</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" id="btn-confirmar" data-action-url="" class="btn btn-primary" data-dismiss="modal"><i class="fas fa-check"></i> {% trans "Confirmar Compra" %}</button>
+                    <button type="button" id="btn-confirmar-modal-compra" data-action-url="" class="btn btn-primary" data-dismiss="modal"><i class="fas fa-check"></i> {% trans "Confirmar Compra" %}</button>
                     <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fas fa-times"></i> {% trans "Fechar" %}</button>
                 </div>
             </div>
