--- a/html/templates/store_list.html
+++ b/html/templates/store_list.html
@@ -168,7 +168,11 @@ Quinta: 20:30 horário de Brasília
                         {% endif %}
                         {% if is_lot_vip %}
                           <!-- O vip não aparecerá mais. Agora se for lote amazon, a imgem será /vip-amz.png e se for ebay, /vip-ebay.png-->
+                         {% if lot.destination == 1 %}
                             <img class="img-vip" src="/static/img/vip-amz.png" width="" />
+                         {% elif lot.destination == 2 %}
+                            <img class="img-vip" src="/static/img/vip-ebay.png" width="" />
+                         {% endif %}
                          <!-- Fim selo -->
                         {% endif %}
 
