envio do produto para o estoque de acordo com destino amazon ou ebay; envio fbm com produtos selecionados

--- a/html/templates/product_stock_fbm.html
+++ b/html/templates/product_stock_fbm.html
@@ -123,7 +123,7 @@
             <!-- Novo botao -->
             <a class="btn btn-default" id="btn-add-shipment-brazil"><i class="fa fa-globe"></i> {% trans "Criar Envio para o Brasil" %}</a>
 {% endcomment %}
-          {% if user|has_shipment_perm:'add_shipment' or user|has_shipment_perm:'add_fbm_shipment' %}
+          {% if user|has_shipment_perm:'add_fbm_shipment' %}
             <form action="" method="post" class="form-add-shipment" id="form-add-shipment">
                 {% csrf_token %}
             </form>
@@ -158,11 +158,9 @@
                       {% trans "Ordenar pelo status" as order_status %}
                       <a title="{{ order_status }}" href="javascript:void(0);">{% trans "Status" %} <i class="fa fa-fw fa-sort-amount-asc"></i></a>
                   </th>
-{% comment %}
-                  {% if user|has_shipment_perm:'add_shipment' or user|has_shipment_perm:'add_fbm_shipment' %}
+                  {% if user|has_shipment_perm:'add_fbm_shipment' %}
                   <th class="center">{% trans "Envio" %}</th>
                   {% endif %}
-{% endcomment %}
                   <th class="center"> {% trans "Visualizar" %}</th>
                 </tr>
               </thead>
@@ -290,8 +288,7 @@
                       <!-- fim box -->
                       {% endif %}
                   </td>
-{% comment %}
-                  {% if user|has_shipment_perm:'add_shipment' or user|has_shipment_perm:'add_fbm_shipment' %}
+                  {% if user|has_shipment_perm:'add_fbm_shipment' %}
                       <td class="center">
                           {% if product.status == 2 and product.user == request.user %}
                               {% if product.quantity_partial is not None and product.quantity_partial > 0 or product.quantity_partial is None and product.quantity > 0 %}
@@ -300,7 +297,6 @@
                           {% endif %}
                       </td>
                   {% endif %}
-{% endcomment %}
                   <td class="center">
                       <a class=" download" href="{% url 'product_details' product.id %}"><i class="fa fa-pencil-square"></i>  {% trans "Visualizar" %}</a>
                   </td>
