--- a/html/templates/invoice.html
+++ b/html/templates/invoice.html
@@ -206,6 +206,8 @@
     <p class="center">Do you need further assistance with your order? Email us at support@voiservices.com and include order number in your message.</p>
 </div>
 
+<a href="javascript:window.print();" class="btn btn-default imprimir"><i class="fas fa-print"></i> Imprimir Invoice</a>
+
     <!-- Loading basta dar display block-->
     <div class="loading" style="display: none;">{% trans "Carregando" %}...</div>
 
