--- a/html/templates/store_lot_details.html
+++ b/html/templates/store_lot_details.html
@@ -58,6 +58,10 @@
                     <br><br>
                     {% render_payment_button paypal_form lot.id %}
                   <!-- fim botao compra -->
+
+                  <br>
+                  <a href="#" class="btn btn-default"><i class="fa fa-credit-card"></i> {% trans "Pagar com Cartão de Crédito" %}</a>
+
                   {% endif %}
               </div>
           </div>
@@ -196,6 +200,11 @@
                 <br><br>
                 {% render_payment_button paypal_form lot.id %}
                 <!-- fim botao compra -->
+
+                <!-- Botão compra cartão -->
+
+                <br>
+                <a href="#" class="btn btn-default"><i class="fa fa-credit-card"></i> {% trans "Pagar com Cartão de Crédito" %}</a>
 
                 <br><br>
                 {% if user|has_store_perm:'change_lot' %}
